# C-E-commerce-platform-2021

./: README.md
1-C++E-commerce platform-2021-lab1/: user.txt
1-C++E-commerce platform-2021-lab1/src/: CMakeLists.txt  goods.h  goods_func.cpp  goods_func.h  in_out.cpp  in_out.h  screen_jump.cpp  screen_jump.h  user_func.cpp  user_func.h
1-C++E-commerce platform-2021-lab1/test/: main.cpp
2-C++E-commerce platform-2021-lab2/: goods.txt
2-C++E-commerce platform-2021-lab2/src/: cart.cpp  cart.h  cart_func.cpp  cart_func.h  goods.h  goods_func.cpp  goods_func.h  in_out.cpp  in_out.h  screen_jump.cpp  screen_jump.h  user.cpp  user_func.cpp  user_func.h
2-C++E-commerce platform-2021-lab2/test/: CMakeLists.txt  main.cpp
3-C++E-commerce platform-2021-lab3/client/: cart.cpp  cart.h  cart_func.cpp  cart_func.h  client.cpp  client.h  client.sln  client.vcxproj  client.vcxproj.filters  goods.h  goods_func.cpp  goods_func.h  main.cpp  user.cpp  user.h  user_func.cpp  user_func.h
3-C++E-commerce platform-2021-lab3/server/: cart.cpp  cart.h  (+18 more)
C++E-commerce platform-2021-lab1-(with admin)/: user.txt
C++E-commerce platform-2021-lab1-(with admin)2.0/: require.txt
C++E-commerce platform-2021-lab1-(without admin)/: CMakeLists.txt
C++E-commerce platform-2021-lab1-(without admin)/src/: goods.cpp  goods.h  goods_func.cpp  goods_func.h  in_out.cpp  in_out.h  screen_jump.cpp  screen_jump.h  user.h  user_func.cpp  user_func.h
C++E-commerce platform-2021-lab1-(without admin)/test/: main.cpp
C++E-commerce platform-2021-lab3-(with admin)4.0-try3.0/: cart.txt  goods.txt  user.txt
(+109 files in other folders)
